# ha-unraid-management-agent

./: .codecov.yml  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DATA_MAPPING.md  GEMINI.md  LICENSE  README.md  hacs.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.augment/rules/: ha-entities.md
.claude/: instructions.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  menu.sh
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/instructions/: config_flow.instructions.md  coordinator.instructions.md  diagnostics.instructions.md  entities.instructions.md  json.instructions.md  manifest.instructions.md  markdown.instructions.md  python.instructions.md  repairs.instructions.md  service_actions.instructions.md  services_yaml.instructions.md  tests.instructions.md  translations.instructions.md  yaml.instructions.md
.github/prompts/: Add Action.prompt.md  Add Config Option.prompt.md  Add Entity Platform.prompt.md  Add Entity to Device.prompt.md  Add New Sensor.prompt.md  Create ADR.prompt.md  Create Implementation Plan.prompt.md  Debug Coordinator Issue.prompt.md  Review Integration.prompt.md  Update Translations.prompt.md
.github/workflows/: ci.yml  hassfest.yml  labeler.yml  release.yml  stale.yml  validate.yml
.local/: ha-venv
config/: configuration.yaml
custom_components/unraid_management_agent/: __init__.py  api_client.py  binary_sensor.py  button.py  cleanup.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event.py  icons.json  manifest.json  number.py  quality_scale.yaml  repairs.py  sensor.py  services.yaml  strings.json  switch.py  websocket_client.py
custom_components/unraid_management_agent/api/: __init__.py  _version.py  calculators.py  client.py  constants.py  events.py  exceptions.py  formatting.py  mcp.py  models.py  websocket.py
custom_components/unraid_management_agent/translations/: en.json
docs/: CODECOV_SETUP.md
script/: check  clean  develop  hassfest  help  lint  lint-check  spell  spell-check  test  type-check
script/.lib/: output.sh
script/setup/: bootstrap  reset  setup  sync-hacs
scripts/: develop  lint  menu  restart  setup  start  stop
tests/: conftest.py  const.py  test_binary_sensor.py  test_button.py  test_calculators.py  test_cleanup.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_remote_shares.py  test_repairs.py  test_sensor.py  test_switch.py
